--- a/php71-dev/config/supervisord/supervisord.conf
+++ b/php71-dev/config/supervisord/supervisord.conf
@@ -16,10 +16,10 @@ numprocs=1
 autostart=true
 autorestart=true
 
-[program:php71-fpm-log]
-command=tail -f /var/opt/remi/php71/log/php-fpm/error.log
-stdout_events_enabled=true
-stderr_events_enabled=true
+# [program:php71-fpm-log]
+# command=tail -f /var/opt/remi/php71/log/php-fpm/error.log
+# stdout_events_enabled=true
+# stderr_events_enabled=true
 
 # [program:nginx]
 # command=/usr/sbin/nginx
