--- a/php71-dev/config/php-fpm/php-fpm.conf
+++ b/php71-dev/config/php-fpm/php-fpm.conf
@@ -23,7 +23,8 @@ include=/etc/opt/remi/php71/php-fpm.d/*.conf
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
 ; Default Value: /var/opt/remi/php71/log/php-fpm.log
-error_log = /var/opt/remi/php71/log/php-fpm/error.log
+;error_log = /var/opt/remi/php71/log/php-fpm/error.log
+error_log = /logs/error.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
