--- a/php71-dev/config/php-fpm/php-fpm.d/www.conf
+++ b/php71-dev/config/php-fpm/php-fpm.d/www.conf
@@ -317,7 +317,8 @@ pm.max_spare_servers = 35
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = /var/opt/remi/php71/log/php-fpm/www-slow.log
+;slowlog = /var/opt/remi/php71/log/php-fpm/www-slow.log
+slowlog = /logs/www-slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
