--- a/php71-dev/config/php-ini/php.ini
+++ b/php71-dev/config/php-ini/php.ini
@@ -457,7 +457,7 @@ memory_limit = 128M
 ; Development Value: E_ALL
 ; Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; http://php.net/error-reporting
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+error_reporting = E_ALL
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -580,7 +580,7 @@ html_errors = On
 ; empty.
 ; http://php.net/error-log
 ; Example:
-error_log = /var/log/php_errors.log
+error_log = /logs/php_errors.log
 ; Log errors to syslog.
 ;error_log = syslog
 
