--- a/php71-dev/config/php-fpm/php-fpm.conf
+++ b/php71-dev/config/php-fpm/php-fpm.conf
@@ -24,7 +24,7 @@ include=/etc/opt/remi/php71/php-fpm.d/*.conf
 ; in a local file.
 ; Default Value: /var/opt/remi/php71/log/php-fpm.log
 ;error_log = /var/opt/remi/php71/log/php-fpm/error.log
-error_log = /logs/error.log
+error_log = /logs/php_errors.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
