--- a/php71-dev/config/php-fpm/php-fpm.d/www.conf
+++ b/php71-dev/config/php-fpm/php-fpm.d/www.conf
@@ -318,7 +318,6 @@ pm.max_spare_servers = 35
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
 ;slowlog = /var/opt/remi/php71/log/php-fpm/www-slow.log
-slowlog = /logs/www-slow.log
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
@@ -412,8 +411,8 @@ slowlog = /logs/www-slow.log
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-php_admin_value[error_log] = /var/opt/remi/php71/log/php-fpm/www-error.log
-php_admin_flag[log_errors] = on
+;php_admin_value[error_log] = /var/opt/remi/php71/log/php-fpm/www-error.log
+;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 128M
 
 ; Set the following data paths to directories owned by the FPM process user.
